prevent IP & hostname wrapping in tables
adding `white-space: nowrap;` to `td` style prevents a wrapping a string without any spaces in a table.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -159,6 +159,10 @@ th {
   background-color: var(--theme-th-bg);
 }
 
+td {
+  white-space: nowrap;
+}
+
 /* Scrollbar */
 
 /* Firefox */
